--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prepare:husky": "husky",
     "dev": "run-p dev:*",
     "dev:client": "run-p dev:client:*",
-    "dev:client:browser": "env-cmd pnpm _rspack serve -c rspack/config.browser.ts",
-    "dev:client:server": "env-cmd pnpm _rspack build -c rspack/config.server.ts",
+    "dev:client:browser": "env-cmd pnpm rspack serve -c rspack/config.browser.ts",
+    "dev:client:server": "env-cmd pnpm rspack build -c rspack/config.server.ts",
     "dev:server": "run-s dev:server:*",
     "dev:server:wait": "env-cmd -i wait-on http://localhost:{{WDS_PORT}}/public/manifest.json",
     "dev:server:run": "nodemon",
@@ -34,7 +34,7 @@
     "deps:upgrade:doctor": "run-p check:types check:styles check:scripts build",
     "clean": "shx rm -rf dist",
     "build": "pnpm clean && run-p build:*",
-    "build:client": "pnpm _rspack build -c rspack/config.single.ts",
+    "build:client": "pnpm rspack build -c rspack/config.single.ts",
     "build:server": "swc ./src/server -d ./dist --copy-files --strip-leading-paths --config-file server.swcrc",
     "build:public": "swc ./src/public -d ./dist --copy-files --strip-leading-paths --config-file public.swcrc",
     "stats": "cross-env WITH_STATS=true NODE_ENV=production pnpm build && serve ./dist/bundle-stats.html",
@@ -50,8 +50,6 @@
     "_stylelint": "stylelint --ignore-path=.gitignore",
     "_docker-build": "cross-env DOCKER_BUILDKIT=1 docker buildx build . --build-arg BUILDKIT_INLINE_CACHE=1 --push",
     "_sort-package-json": "sort-package-json",
-    "__rspack": "rspack",
-    "_rspack": "cross-env NODE_OPTIONS=\"-r ts-node/register\" rspack",
     "🪝": "████████████████████████ ✋ GIT HOOKS 👇 ██████████████████████████",
     "husky:commit-msg": "commitlint",
     "husky:pre-commit": "lint-staged",
@@ -60,7 +58,7 @@
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@nitedani/shrink-ray-current": "4.3.0",
-    "@unhead/vue": "2.0.10",
+    "@unhead/vue": "2.0.12",
     "animate.css": "4.1.1",
     "axios": "1.10.0",
     "cookie-parser": "1.4.7",
@@ -78,11 +76,11 @@
     "pino-http": "10.5.0",
     "pino-pretty": "13.0.0",
     "purgecss": "7.0.2",
-    "redis": "5.5.6",
+    "redis": "5.6.0",
     "safe-stable-stringify": "2.5.0",
     "serve-favicon": "2.5.1",
     "surenv": "1.1.0",
-    "ua-parser-js": "2.0.3",
+    "ua-parser-js": "2.0.4",
     "vue": "3.5.17",
     "vue-router": "4.5.1"
   },
@@ -91,42 +89,42 @@
     "@b12k/env-cmd": "10.2.0",
     "@commitlint/config-conventional": "19.8.1",
     "@eslint/config-inspector": "1.1.0",
-    "@eslint/js": "9.29.0",
-    "@rspack/cli": "1.3.15",
-    "@rspack/core": "1.3.15",
+    "@eslint/js": "9.31.0",
+    "@rspack/cli": "1.4.6",
+    "@rspack/core": "1.4.6",
     "@swc-node/register": "1.10.10",
-    "@swc/cli": "0.7.7",
-    "@swc/core": "1.12.5",
+    "@swc/cli": "0.7.8",
+    "@swc/core": "1.12.11",
     "@swc/helpers": "0.5.17",
     "@types/bootstrap": "5.2.10",
     "@types/cookie-parser": "1.4.9",
     "@types/express": "5.0.3",
     "@types/express-pino-logger": "4.0.5",
     "@types/js-cookie": "3.0.6",
-    "@types/lodash": "4.17.18",
-    "@types/node": "24.0.3",
+    "@types/lodash": "4.17.20",
+    "@types/node": "24.0.13",
     "@types/nunjucks": "3.2.6",
     "@types/serve-favicon": "2.5.7",
     "@types/ua-parser-js": "0.7.39",
-    "@typescript-eslint/parser": "8.35.0",
-    "@vue/language-server": "2.2.10",
+    "@typescript-eslint/parser": "8.36.0",
+    "@vue/language-server": "3.0.1",
     "autoprefixer": "10.4.21",
-    "bundle-stats-webpack-plugin": "4.20.2",
+    "bundle-stats-webpack-plugin": "4.21.0",
     "chokidar": "4.0.3",
     "commitlint": "19.8.1",
     "cross-env": "7.0.3",
     "css-loader": "7.1.2",
     "djlint": "1.36.4",
-    "eslint": "9.29.0",
+    "eslint": "9.31.0",
     "eslint-config-prettier": "10.1.5",
-    "eslint-import-resolver-typescript": "4.4.3",
-    "eslint-plugin-import-x": "4.15.2",
+    "eslint-import-resolver-typescript": "4.4.4",
+    "eslint-plugin-import-x": "4.16.1",
     "eslint-plugin-perfectionist": "4.15.0",
-    "eslint-plugin-prettier": "5.5.0",
+    "eslint-plugin-prettier": "5.5.1",
     "eslint-plugin-unicorn": "59.0.1",
-    "eslint-plugin-vue": "10.2.0",
+    "eslint-plugin-vue": "10.3.0",
     "file-loader": "6.2.0",
-    "globals": "16.2.0",
+    "globals": "16.3.0",
     "husky": "9.1.7",
     "ignore-loader": "0.1.2",
     "lint-staged": "16.1.2",
@@ -136,26 +134,26 @@
     "postcss": "8.5.6",
     "postcss-html": "1.8.0",
     "postcss-loader": "8.1.1",
-    "prettier": "3.6.0",
+    "prettier": "3.6.2",
     "prettier-plugin-jinja-template": "2.1.0",
     "rspack-manifest-plugin": "5.0.3",
     "sass": "1.89.2",
     "sass-loader": "16.0.5",
     "serve": "14.2.4",
     "shx": "0.4.0",
-    "sort-package-json": "3.3.0",
-    "stylelint": "16.21.0",
+    "sort-package-json": "3.4.0",
+    "stylelint": "16.21.1",
     "stylelint-config-prettier-scss": "1.0.0",
-    "stylelint-config-recommended-vue": "1.6.0",
+    "stylelint-config-recommended-vue": "1.6.1",
     "stylelint-config-standard-scss": "15.0.1",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
-    "typescript-eslint": "8.35.0",
+    "typescript-eslint": "8.36.0",
     "url-loader": "4.1.1",
     "vue-loader": "17.4.2",
     "vue-style-loader": "4.1.3",
-    "vue-tsc": "2.2.10",
+    "vue-tsc": "3.0.1",
     "wait-on": "8.0.3"
   },
-  "packageManager": "pnpm@10.12.2"
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
