--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
   "dependencies": {
     "@b12k/vue3-router-gmc": "0.1.3",
     "@nitedani/shrink-ray-current": "4.3.0",
-    "@unhead/vue": "2.0.12",
+    "@unhead/vue": "2.0.14",
     "animate.css": "4.1.1",
-    "axios": "1.10.0",
+    "axios": "1.11.0",
     "cookie-parser": "1.4.7",
     "decache": "4.6.2",
     "deep-object-diff": "1.1.9",
@@ -72,16 +72,16 @@
     "nunjucks": "3.2.4",
     "path-to-regexp": "8.2.0",
     "pinia": "3.0.3",
-    "pino": "9.7.0",
+    "pino": "9.8.0",
     "pino-http": "10.5.0",
-    "pino-pretty": "13.0.0",
+    "pino-pretty": "13.1.1",
     "purgecss": "7.0.2",
-    "redis": "5.6.0",
+    "redis": "5.8.0",
     "safe-stable-stringify": "2.5.0",
     "serve-favicon": "2.5.1",
     "surenv": "1.1.0",
     "ua-parser-js": "2.0.4",
-    "vue": "3.5.17",
+    "vue": "3.5.18",
     "vue-router": "4.5.1"
   },
   "devDependencies": {
@@ -89,47 +89,47 @@
     "@b12k/env-cmd": "10.2.0",
     "@commitlint/config-conventional": "19.8.1",
     "@eslint/config-inspector": "1.1.0",
-    "@eslint/js": "9.31.0",
-    "@rspack/cli": "1.4.6",
-    "@rspack/core": "1.4.6",
+    "@eslint/js": "9.32.0",
+    "@rspack/cli": "1.4.11",
+    "@rspack/core": "1.4.11",
     "@swc-node/register": "1.10.10",
     "@swc/cli": "0.7.8",
-    "@swc/core": "1.12.11",
+    "@swc/core": "1.13.3",
     "@swc/helpers": "0.5.17",
     "@tailwindcss/postcss": "4.1.11",
     "@types/bootstrap": "5.2.10",
     "@types/cookie-parser": "1.4.9",
     "@types/express": "5.0.3",
-    "@types/express-pino-logger": "4.0.5",
+    "@types/express-pino-logger": "4.0.6",
     "@types/js-cookie": "3.0.6",
     "@types/lodash": "4.17.20",
-    "@types/node": "24.0.13",
+    "@types/node": "24.2.0",
     "@types/nunjucks": "3.2.6",
     "@types/serve-favicon": "2.5.7",
     "@types/ua-parser-js": "0.7.39",
-    "@typescript-eslint/parser": "8.36.0",
-    "@vue/language-server": "3.0.1",
+    "@typescript-eslint/parser": "8.39.0",
+    "@vue/language-server": "3.0.5",
     "autoprefixer": "10.4.21",
-    "bundle-stats-webpack-plugin": "4.21.0",
+    "bundle-stats-webpack-plugin": "4.21.2",
     "chokidar": "4.0.3",
     "commitlint": "19.8.1",
-    "cross-env": "7.0.3",
+    "cross-env": "10.0.0",
     "css-loader": "7.1.2",
-    "eslint": "9.31.0",
-    "eslint-config-prettier": "10.1.5",
+    "eslint": "9.32.0",
+    "eslint-config-prettier": "10.1.8",
     "eslint-import-resolver-typescript": "4.4.4",
     "eslint-plugin-import-x": "4.16.1",
     "eslint-plugin-perfectionist": "4.15.0",
-    "eslint-plugin-prettier": "5.5.1",
-    "eslint-plugin-unicorn": "59.0.1",
-    "eslint-plugin-vue": "10.3.0",
+    "eslint-plugin-prettier": "5.5.4",
+    "eslint-plugin-unicorn": "60.0.0",
+    "eslint-plugin-vue": "10.4.0",
     "file-loader": "6.2.0",
     "globals": "16.3.0",
     "husky": "9.1.7",
     "ignore-loader": "0.1.2",
-    "lint-staged": "16.1.2",
+    "lint-staged": "16.1.4",
     "nodemon": "3.1.10",
-    "npm-check-updates": "18.0.1",
+    "npm-check-updates": "18.0.2",
     "npm-run-all": "4.1.5",
     "postcss": "8.5.6",
     "postcss-html": "1.8.0",
@@ -140,19 +140,19 @@
     "serve": "14.2.4",
     "shx": "0.4.0",
     "sort-package-json": "3.4.0",
-    "stylelint": "16.21.1",
+    "stylelint": "16.23.1",
     "stylelint-config-prettier-scss": "1.0.0",
     "stylelint-config-recommended-vue": "1.6.1",
     "stylelint-config-standard-scss": "15.0.1",
     "tailwindcss": "4.1.11",
     "ts-node": "10.9.2",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.36.0",
+    "typescript": "5.9.2",
+    "typescript-eslint": "8.39.0",
     "url-loader": "4.1.1",
     "vue-loader": "17.4.2",
     "vue-style-loader": "4.1.3",
-    "vue-tsc": "3.0.1",
-    "wait-on": "8.0.3"
+    "vue-tsc": "3.0.5",
+    "wait-on": "8.0.4"
   },
-  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
+  "packageManager": "pnpm@10.14.0"
 }
